# iocatcher

./: .gitignore  Authors.md  CMakeLists.txt  Doxyfile  NOTICE  README.md  bench.sh  configure  main.cpp  options
cip/: Jenkinsfile  job.params  sonar-project.properties  workflow.yml
cmake/: FindLibFabric.cmake  FindLibevent.cmake  FindLibeventPthreads.cmake  FindMero.cmake  FindMotr.cmake  macros.cmake  unittest-macros.cmake
demo/: bench-direct-size.c  bench-size.c  main-demo.c  main-ummap-cow-demo-mpi.c  main-ummap-cow-demo.c
dev/: gen-coverage.sh
doc/: Makefile  build.rst  client-api.rst  conf.py  index.rst  technical-details.rst  uml.rst
doc/images/: uml.dot
examples/: ioc-ummap-client-example.c  main.c
examples/bench/: ioc-bandwidth-mpi-small.c  ioc-bandwidth-mpi.c  ioc-bandwidth-threads.c  ioc-ummap-bandwidth-mpi-500GB.c  ioc-ummap-bandwidth-mpi-dummy.c  ioc-ummap-bandwidth-mpi.c  mero-ummap-bandwidth-mpi.c
extern-deps/: CMakeLists.txt
extern-deps/from-cern-lhcb-daqpipe-v2/: CMakeLists.txt  Debug.cpp  Debug.hpp  FormattedMessage.cpp  FormattedMessage.hpp
extern-deps/from-cern-lhcb-daqpipe-v2/tests/: CMakeLists.txt  TestDebug.cpp  TestFormattedMessage.cpp
extern-deps/from-clovis-sample-apps/: CMakeLists.txt  clovis_api.c
extern-deps/from-motr-sample-apps/: CMakeLists.txt  buffer.c  c0appz_internal.h  c0appz_isc.h  clovis_api.c  clovis_api.h
extern-deps/googletest-release-1.10.0/: CMakeLists.txt
extern-deps/googletest-release-1.10.0/googlemock/include/gmock/: gmock-actions.h
extern-deps/googletest-release-1.10.0/googlemock/scripts/: upload.py
extern-deps/googletest-release-1.10.0/googletest/scripts/: upload.py
src/: CMakeLists.txt  config.h.in
src/base/: CMakeLists.txt
src/base/common/: CMakeLists.txt  Debug.hpp
src/base/network/: CMakeLists.txt  ClientRegistry.cpp  ClientRegistry.hpp  Hook.cpp  Hook.hpp  HookLambdaFunction.cpp  HookLambdaFunction.hpp  LibfabricConnection.cpp  LibfabricConnection.hpp  LibfabricDomain.cpp  LibfabricDomain.hpp  Protocol.cpp  Protocol.hpp  Protocol_inlined.hpp  Serializer.cpp  Serializer.hpp  Serializer_inlined.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
src/base/network/bench/: BenchLibfabricDomain.cpp  BenchSerializer.cpp  CMakeLists.txt
src/base/network/tests/: CMakeLists.txt  TestClientRegistry.cpp  TestConnection.cpp  TestLibfabricConnection.cpp  TestLibfabricDomain.cpp  TestProtocol.cpp  TestSerializer.cpp  TestTcpClientServer.cpp
src/client/: Actions.cpp  Actions.hpp  CMakeLists.txt  ioc-client.cpp  ioc-client.h  main.cpp
src/common/: CMakeLists.txt  Debug.hpp
src/network/: CMakeLists.txt  LibfabricDomain.cpp  LibfabricDomain.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/backends/: CMakeLists.txt  MemoryBackendBalance.cpp  MemoryBackendBalance.hpp  MemoryBackendCache.cpp  MemoryBackendCache.hpp  MemoryBackendMalloc.cpp  MemoryBackendMalloc.hpp  MemoryBackendNvdimm.cpp  MemoryBackendNvdimm.hpp  MemoryBackendNvdimmGrow.cpp  MemoryBackendNvdimmGrow.hpp  MemoryBackendRoundRobin.cpp  MemoryBackendRoundRobin.hpp  StorageBackendGMock.hpp  StorageBackendMero.cpp  StorageBackendMero.hpp  clovis_api.h
src/server/backends/tests/: CMakeLists.txt  TestMemoryBackendBalance.cpp  TestMemoryBackendCache.cpp  TestMemoryBackendMalloc.cpp  TestMemoryBackendNvdimm.cpp  TestMemoryBackendNvdimmGrow.cpp  TestMemoryBackendRoundRobin.cpp
src/server/core/: CMakeLists.txt  ClientRegistry.hpp  Config.cpp  Config.hpp  ConsistencyTracker.cpp  ConsistencyTracker.hpp  Consts.hpp  Container.cpp  Container.hpp  MemoryBackend.cpp  MemoryBackend.hpp  Object.cpp  Object.hpp  ObjectSegment.cpp  ObjectSegment.hpp  Server.cpp  Server.hpp  ServerActions.cpp  ServerActions.hpp  ServerStats.hpp  StorageBackend.cpp  StorageBackend.hpp
src/server/core/tests/: CMakeLists.txt  TestBackend.cpp  TestClientRegistry.cpp  TestConfig.cpp  TestConsistencyTracker.cpp  TestContainer.cpp  TestObject.cpp  TestObjectCow.cpp  TestObjectSegment.cpp  TestServer.cpp
src/server/hooks/: CMakeLists.txt  HookFlush.cpp  HookFlush.hpp  HookObjectCow.cpp  HookObjectCow.hpp  HookObjectCreate.cpp  HookObjectCreate.hpp  HookObjectRead.cpp  HookObjectRead.hpp  HookObjectWrite.cpp  HookObjectWrite.hpp  HookPingPong.cpp  HookPingPong.hpp  HookRangeRegister.cpp  HookRangeRegister.hpp  HookRangeUnregister.cpp  HookRangeUnregister.hpp
src/server/hooks/tests/: CMakeLists.txt  TestHookObjectCreate.cpp  TestHookObjectFlush.cpp  TestHookObjectRead.cpp  TestHookObjectWrite.cpp
src/server/worker/: Task.hpp
src/tests/: CMakeLists.txt  TestClientServer.cpp
